Bug 849253 - Make SkiaGL a build-time option independent of Skia, and disable it on PPC[64] r=mattwoodrow